deploy/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondary-scheduler-operator
  namespace: openshift-secondary-scheduler-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: secondary-scheduler-operator
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        name: secondary-scheduler-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: secondary-scheduler-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          image: quay.io/openshift/secondary-scheduler-operator:4.17
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
          - containerPort: 8443
            name: https
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          livenessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /healthz
            initialDelaySeconds: 45
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /healthz
            initialDelaySeconds: 10
            timeoutSeconds: 10
          command:
          - secondary-scheduler-operator
          args:
          - "operator"
          imagePullPolicy: Always
          volumeMounts:
          - name: tmp
            mountPath: "/tmp"
          - name: serving-cert
            mountPath: /var/run/secrets/serving-cert
            readOnly: true
      serviceAccountName: secondary-scheduler-operator
      serviceAccount: secondary-scheduler-operator
      volumes:
      - name: tmp
        emptyDir: {}
      - name: serving-cert
        secret:
          secretName: secondary-scheduler-operator-serving-cert
          optional: true
